// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions accountUpdate 1`] = `
Object {
  "type": "account",
  "value": "test",
}
`;

exports[`actions addressesUpdate 1`] = `
Object {
  "type": "addresses",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions balancesUpdate 1`] = `
Object {
  "type": "balances",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions calculateNav 1`] = `
Array [
  Object {
    "type": "nav",
    "value": Array [
      123,
      456,
    ],
  },
]
`;

exports[`actions custodianPricesUpdate 1`] = `
Object {
  "type": "custodianPrices",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions custodianStatesUpdate 1`] = `
Object {
  "type": "custodianStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions getAddresses 1`] = `
Array [
  Object {
    "type": "addresses",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions getBalances 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
  Object {
    "type": "account",
    "value": "test",
  },
  Object {
    "type": "balances",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions getCustodianPrices 1`] = `
Array [
  Object {
    "type": "custodianPrices",
    "value": Object {
      "last": "last",
      "reset": "reset",
    },
  },
]
`;

exports[`actions getCustodianStates 1`] = `
Array [
  Object {
    "type": "custodianStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions navUpdate 1`] = `
Object {
  "type": "nav",
  "value": Array [
    123,
    456,
  ],
}
`;
